# gpt_free_telegram_bot

./: .env  .env.template  README.md  gpt.py  log_config.py  pyproject.toml  tg_bot.py
src/: tg_bot.py
tests/: test_tg_bot.py
utils/: gpt.py  log_config.py
