[tool.poetry]
name = "gpt-free-telegram-bot"
version = "0.1.0"
description = ""
authors = ["Octopulus96 <octopulus96@gmail.com>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12"
g4f = "^0.2.2.7"
pytest = "^8.0.2"
python-telegram-bot = "^20.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
